--- a/streams.adoc
+++ b/streams.adoc
@@ -38,12 +38,12 @@ fn main() -> io::Result<()> {
 }
 ```
 
-This example includes the `Read` footnote:[https://doc.rust-lang.org/std/io/trait.Read.html] and `Write` footnote:[https://doc.rust-lang.org/std/io/trait.Write.html] traits to ensure they're in scope, as `Stdin` and `Stdout` use these in their implementations to provide the `Read::read_to_string()` footnote:[https://doc.rust-lang.org/std/io/trait.Read.html#method.read_to_string] and `Write::write_all()` footnote:[https://doc.rust-lang.org/std/io/trait.Write.html#method.write_all] methods.
+This example includes the `Read` footnote:[https://doc.rust-lang.org/std/io/trait.Read.html] and `Write` footnote:[https://doc.rust-lang.org/std/io/trait.Write.html] traits to ensure they are in scope, as `Stdin` and `Stdout` use these in their implementations to provide the `Read::read_to_string()` footnote:[https://doc.rust-lang.org/std/io/trait.Read.html#method.read_to_string] and `Write::write_all()` footnote:[https://doc.rust-lang.org/std/io/trait.Write.html#method.write_all] methods.
 
 == Decoupling using the `Read` and `Write` traits
 
 One of the issuesfootnote:[Another issue with this prototype is that it uses `Read::read_to_string()`, which will read the contents of the whole stream from the input before writing everything to stdout at once, which is inefficient, especially for larger inputs. A more efficient implementation could use buffered reading through the `BufRead` trait to read and write the input stream line by line.] in the prototype above is that it currently uses the `Stdout` and `Stdin` structs directly, which makes our program difficult to test.
-It's inconvenient to pass input through stdin and capture stdout to assert the program produces the correct results.
+It is inconvenient to pass input through stdin and capture stdout to assert the program produces the correct results.
 
 To make our program more modular, we will decouple it from the `Stdin` and `Stdout` structs by passing the input and output as arguments to a more abstract, separate function.
 Our prototype was based on functions from the `Read` and `Write` traits, so we will test our new function with input and output data types that also implement those traits: an byte array for input and a vector for output.
