--- a/streams.adoc
+++ b/streams.adoc
@@ -3,20 +3,28 @@ Jeff Kreeftmeijer <https://jeffkreeftmeijer.com>
 2021-06-29
 :fn-bufread:
 
-Most operating systems provide three different I/O streams, consisting of standard input (stdin), standard output (stdout), and standard error (stderr).
-These standard streams provide an abstraction around input and output, removing the need for programs to explicitly connect to input and output devices--like keyboards and displays--or other programs.
+_Standard streams_ are abstractions used to handle data input and output to an operating system process. 
+Each program has access to an input stream (_standard input_, or _stdin_), an output stream (_standard output_, or _stdout_), and an error stream (_standard error_, or _stderr_) inherited from the parent process.
 
-The three streams are channels for passing input (stdin) and output to and from a program.
-The two output streams handle general output (stdout) and errors (stderr).
+.`grep(1)` filters lines read from stdin with a search pattern ("`three`" in this case) and prints matching lines to stdout. After starting, `grep` halts to wait for input from stdin. By typing this input into the terminal, we can see that `grep` prints any line that matches the pattern back to stdout, which the terminal displays. Then, the program returns to waiting for input until it receives an _EOF_ (_end-of-file_), which we pass by pressing kbd:[ctrl]+kbd:[D] in the terminal.
+[subs=+quotes]
+----
+$ grep three
+one
+two
+three
+_three_
+----
 
-Because of this abstraction, programs can use piping to pass the input from one program to another.
-For example, `ls` writes a list of directory contents to stdout, and `grep` takes input through stdin to filter.
-By chaining these together in a pipe, we can print files that match the word "`Cargo`" in the current directory to stdout:
+Because of this abstraction, programs can use _pipelines_ to pass the output from one program as the input to another by piping stdout from one process to stdin for another.
 
-    $ ls | grep Cargo
-    Cargo.lock
-    Cargo.toml
-    $
+.`ls(1)` prints the current directory's contents to stdout. This example uses a _pipe_ (`|`) to create a pipeline, to pass the output from `ls` to `grep` as input. `grep` then filters to only print lines matching the passed pattern ("`Cargo`").
+[subs=+quotes]
+----
+$ ls -l ~/pager | grep Cargo
+_Cargo.lock_
+_Cargo.toml_
+----
 
 == `Stdin`, `Stdout` and `Stderr` in Rust
 
