--- a/streams.adoc
+++ b/streams.adoc
@@ -1,4 +1,4 @@
-= Working with standard streams in Rust
+= Testing Input and Output in Rust Command Line Applications
 Jeff Kreeftmeijer <https://jeffkreeftmeijer.com>
 2021-06-29
 
