--- a/streams.adoc
+++ b/streams.adoc
@@ -60,7 +60,7 @@ The stream handlers implement the https://doc.rust-lang.org/std/io/trait.Read.ht
 
 == Abstraction using the `Read` and `Write` traits
 
-One of the issuesfootnote:[Another issue with this example is that it uses `Read::read_to_string()`, which will read the contents of the whole stream from the input before writing everything to stdout at once, which is inefficient, especially for larger inputs. A more efficient implementation could use buffered reading through the `BufRead` trait to read and write the input stream line by line.] in the <<upcase, example>> above is that it uses the `Stdout` and `Stdin` structs directly, making our program challenging to test, because it is inconvenient to pass input through stdin and capture stdout to assert that the program produces the correct results.
+One of the issuesfootnote:[Another issue with this example is that it uses https://doc.rust-lang.org/std/io/trait.Read.html#method.read_to_string[`Read::read_to_string()`], which will read the contents of the whole stream from the input before writing everything to stdout at once, which is inefficient, especially for larger inputs. A more efficient implementation could use buffered reading through the `BufRead` trait to read and write the input stream line by line.] in the <<upcase, example>> above is that it uses the `Stdout` and `Stdin` structs directly, making our program challenging to test, because it is inconvenient to pass input through stdin and capture stdout to assert that the program produces the correct results.
 
 To make our program more modular, we will decouple it from the `Stdin` and `Stdout` structs and pass the input and output as arguments to a more abstract, separate function.
 
