--- a/streams.adoc
+++ b/streams.adoc
@@ -70,11 +70,13 @@ To make our program more modular, we will decouple it from the `Stdin` and `Stdo
 ```rust
 #[cfg(test)]
 mod tests {
+    use super::*;
+
     #[test]
     fn writes_upcased_input_to_output() {
         let mut output: Vec<u8> = Vec::new();
 
-        super::upcase(&mut "Hello, world!\n".as_bytes(), &mut output).unwrap();
+        upcase(&mut "Hello, world!\n".as_bytes(), &mut output).unwrap();
         assert_eq!(&output, b"HELLO, WORLD!\n");
     }
 }
@@ -87,7 +89,10 @@ mod tests {
 ```rust
 use std::io::{Error, Read, Write};
 
-pub fn upcase(input: &mut dyn Read, output: &mut dyn Write) -> Result<(), Error> {
+pub fn upcase(
+    input: &mut dyn Read,
+    output: &mut dyn Write,
+) -> Result<(), Error> {
     let mut buffer = "".to_string();
 
     input.read_to_string(&mut buffer)?;
